// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password should render Forgot Password Form component correctly 1`] = `
<Fragment>
  <Header
    dateType={null}
    logout={null}
    showTime={true}
    type="unauth"
    updateCurrentDate={null}
    user={null}
  />
  <div
    className="main-wrapper auth-wrapper"
  >
    <div
      className="auth"
    >
      <div
        className="title"
      >
        <h2>
          Forgot Password
        </h2>
        <h4
          className="text-info"
        >
          A link will be sent to your mail to use to reset your password
        </h4>
        <hr
          className="w-75"
        />
      </div>
      <Connect(Form)
        isAuthenticated={false}
        location={
          Object {
            "pathname": "/forgot_password",
            "state": Object {
              "from": Object {
                "pathname": "/",
              },
            },
          }
        }
        mailSendSuccess={false}
        meta={
          Object {
            "btnText": "SEND ME THE LINK",
            "extra": <React.Fragment>
              <React.Fragment>
                <p
                  className="form-extra-info text-center"
                >
                  <React.Fragment>
                    <Link
                      replace={false}
                      to="/signin"
                    >
                      Sign In
                    </Link>
                  </React.Fragment>
                </p>
                <p
                  className="text-center"
                >
                  Or
                </p>
                <p
                  className="form-extra-info text-center"
                >
                  Signup as a
                  <Link
                    replace={false}
                    to="/signup?role=caterer"
                  >
                    Caterer
                  </Link>
                   
                  or a
                  <Link
                    replace={false}
                    to="/signup?role=customer"
                  >
                    Customer
                  </Link>
                </p>
              </React.Fragment>
            </React.Fragment>,
          }
        }
        passwordSetSuccess={false}
        submitError={null}
        submitting={false}
        type="forgotPassword"
      />
    </div>
  </div>
  <Footer />
</Fragment>
`;

exports[`Password should render Password component that is connected to the redux store correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Password)
    isAuthenticated={false}
    location={
      Object {
        "pathname": "/forgot_password",
        "state": Object {
          "from": Object {
            "pathname": "/",
          },
        },
      }
    }
    mailSendSuccess={false}
    passwordSetSuccess={false}
    submitError={null}
    submitting={false}
    type="forgotPassword"
  >
    <Password
      dispatch={[Function]}
      isAuthenticated={false}
      location={
        Object {
          "pathname": "/forgot_password",
          "state": Object {
            "from": Object {
              "pathname": "/",
            },
          },
        }
      }
      mailSendSuccess={false}
      passwordSetSuccess={false}
      submitError={null}
      submitting={false}
      type="forgotPassword"
    >
      <Header
        dateType={null}
        logout={null}
        showTime={true}
        type="unauth"
        updateCurrentDate={null}
        user={null}
      >
        <div
          className="header unauth"
        >
          <div
            className="navbar unauth-navbar"
          >
            <div
              className="page-title"
            >
              <h3>
                <Link
                  replace={false}
                  to="/"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    BOOK-A-MEAL
                  </a>
                </Link>
              </h3>
            </div>
          </div>
        </div>
      </Header>
      <div
        className="main-wrapper auth-wrapper"
      >
        <div
          className="auth"
        >
          <div
            className="title"
          >
            <h2>
              Forgot Password
            </h2>
            <h4
              className="text-info"
            >
              A link will be sent to your mail to use to reset your password
            </h4>
            <hr
              className="w-75"
            />
          </div>
          <Connect(Form)
            dispatch={[Function]}
            isAuthenticated={false}
            location={
              Object {
                "pathname": "/forgot_password",
                "state": Object {
                  "from": Object {
                    "pathname": "/",
                  },
                },
              }
            }
            mailSendSuccess={false}
            meta={
              Object {
                "btnText": "SEND ME THE LINK",
                "extra": <React.Fragment>
                  <React.Fragment>
                    <p
                      className="form-extra-info text-center"
                    >
                      <React.Fragment>
                        <Link
                          replace={false}
                          to="/signin"
                        >
                          Sign In
                        </Link>
                      </React.Fragment>
                    </p>
                    <p
                      className="text-center"
                    >
                      Or
                    </p>
                    <p
                      className="form-extra-info text-center"
                    >
                      Signup as a
                      <Link
                        replace={false}
                        to="/signup?role=caterer"
                      >
                        Caterer
                      </Link>
                       
                      or a
                      <Link
                        replace={false}
                        to="/signup?role=customer"
                      >
                        Customer
                      </Link>
                    </p>
                  </React.Fragment>
                </React.Fragment>,
              }
            }
            passwordSetSuccess={false}
            submitError={null}
            submitting={false}
            type="forgotPassword"
          >
            <Form
              dispatch={[Function]}
              email={null}
              isAuthenticated={false}
              location={
                Object {
                  "pathname": "/forgot_password",
                  "state": Object {
                    "from": Object {
                      "pathname": "/",
                    },
                  },
                }
              }
              mailSendSuccess={false}
              meal={null}
              meta={
                Object {
                  "btnText": "SEND ME THE LINK",
                  "extra": <React.Fragment>
                    <React.Fragment>
                      <p
                        className="form-extra-info text-center"
                      >
                        <React.Fragment>
                          <Link
                            replace={false}
                            to="/signin"
                          >
                            Sign In
                          </Link>
                        </React.Fragment>
                      </p>
                      <p
                        className="text-center"
                      >
                        Or
                      </p>
                      <p
                        className="form-extra-info text-center"
                      >
                        Signup as a
                        <Link
                          replace={false}
                          to="/signup?role=caterer"
                        >
                          Caterer
                        </Link>
                         
                        or a
                        <Link
                          replace={false}
                          to="/signup?role=customer"
                        >
                          Customer
                        </Link>
                      </p>
                    </React.Fragment>
                  </React.Fragment>,
                }
              }
              passwordSetSuccess={false}
              submitError={null}
              submitting={false}
              token={null}
              type="forgotPassword"
              uploading={null}
            >
              <div>
                <form
                  onSubmit={[Function]}
                >
                  <ForgotPasswordForm
                    handlers={
                      Object {
                        "handleBlur": [Function],
                        "handleChange": [Function],
                        "handleFocus": [Function],
                        "handleSubmit": [Function],
                      }
                    }
                    state={
                      Object {
                        "error": Object {
                          "email": null,
                        },
                        "formValid": false,
                        "pristine": true,
                        "touched": Object {
                          "email": false,
                        },
                        "type": "forgotPassword",
                        "typingTimeout": 0,
                        "values": Object {
                          "email": "",
                        },
                      }
                    }
                    type="forgotPassword"
                  >
                    <RenderInput
                      handleBlur={[Function]}
                      handleChange={[Function]}
                      handleFocus={[Function]}
                      id="email"
                      label="Your Email Address"
                      meta={
                        Object {
                          "error": null,
                          "touched": false,
                        }
                      }
                      name="email"
                      placeholder=""
                      required={true}
                      type="email"
                      value=""
                    >
                      <div
                        className="form-input"
                      >
                        <label
                          htmlFor="email"
                          onClick={[Function]}
                        >
                          Your Email Address
                          <span
                            className="danger"
                          >
                            *
                          </span>
                        </label>
                        <input
                          className=""
                          id="email"
                          name="email"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder=""
                          type="email"
                          value=""
                        />
                      </div>
                    </RenderInput>
                  </ForgotPasswordForm>
                  <button
                    className="btn btn-pri btn-block"
                    disabled={true}
                    type="submit"
                  >
                    SEND ME THE LINK
                  </button>
                </form>
                <p
                  className="form-extra-info text-center"
                >
                  <Link
                    replace={false}
                    to="/signin"
                  >
                    <a
                      href="/signin"
                      onClick={[Function]}
                    >
                      Sign In
                    </a>
                  </Link>
                </p>
                <p
                  className="text-center"
                >
                  Or
                </p>
                <p
                  className="form-extra-info text-center"
                >
                  Signup as a
                  <Link
                    replace={false}
                    to="/signup?role=caterer"
                  >
                    <a
                      href="/signup?role=caterer"
                      onClick={[Function]}
                    >
                      Caterer
                    </a>
                  </Link>
                   
                  or a
                  <Link
                    replace={false}
                    to="/signup?role=customer"
                  >
                    <a
                      href="/signup?role=customer"
                      onClick={[Function]}
                    >
                      Customer
                    </a>
                  </Link>
                </p>
              </div>
            </Form>
          </Connect(Form)>
        </div>
      </div>
      <Footer>
        <div
          className="footer"
        >
          <p>
            © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
          </p>
        </div>
      </Footer>
    </Password>
  </Connect(Password)>
</Provider>
`;

exports[`Password should render Reset Password form component correctly 1`] = `
<Fragment>
  <Header
    dateType={null}
    logout={null}
    showTime={true}
    type="unauth"
    updateCurrentDate={null}
    user={null}
  />
  <div
    className="main-wrapper auth-wrapper"
  >
    <div
      className="auth"
    >
      <div
        className="title"
      >
        <h2>
          Reset Your Password
        </h2>
        <hr
          className="w-75"
        />
      </div>
      <Connect(Form)
        isAuthenticated={false}
        location={
          Object {
            "pathname": "/reset_password",
            "state": Object {
              "from": Object {
                "pathname": "/",
              },
            },
          }
        }
        mailSendSuccess={false}
        meta={
          Object {
            "btnText": "RESET PASSWORD",
            "extra": <React.Fragment />,
          }
        }
        passwordSetSuccess={false}
        submitError={null}
        submitting={false}
        type="resetPassword"
      />
    </div>
  </div>
  <Footer />
</Fragment>
`;
